--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -4,3 +4,7 @@ pull_request:
  types:[opened]
 permissions :
  pull-requests: write
+jobs:
+ welcome:
+ name: Post welcome comment
+ runs-on : ubantu -latest
